--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,6 @@
       name="keywords"
       content="adaptive equipment, disability aids, assistive technology, mobility solutions, inclusive ecommerce, disability-friendly jobs, job opportunities for disabled, accessible workplace, assistive devices, disability products, independent living aids"
     />
-    <meta name="robots" content="index, follow" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,6 +18,8 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="manifest" href="/manifest.json" />
+
     <title>Qader - Ecommerce Website</title>
   </head>
   <body aria-live="polite">
